--- a/src/ui.html
+++ b/src/ui.html
@@ -502,6 +502,50 @@
             </div>
         </div>
     </div>
+    <!-- ABA 2: IA GEMINI -->
+    <div id="tab-gemini" class="content">
+        <div class="info-box">
+            🤖 Use a IA do Google Gemini para analisar layouts e criar frames otimizados automaticamente.
+        </div>
+
+        <!-- Configuração da API Key -->
+        <div class="form-group">
+            <label>🔑 API Key do Google Gemini</label>
+            <div style="font-size: 11px; color: #666; margin-bottom: 8px;">
+                Obtenha gratuitamente em:
+                <a href="https://makersuite.google.com/app/apikey" target="_blank" style="color: var(--primary);">Google
+                    AI Studio</a>
+            </div>
+            <input type="password" id="gemini-api-key" placeholder="Cole sua API Key aqui">
+            <div style="display: flex; gap: 8px; margin-top: 8px;">
+                <button id="btn-save-gemini-key" class="btn btn-primary" style="flex: 1;">Salvar API Key</button>
+                <button id="btn-test-gemini" class="btn btn-secondary" style="flex: 1;">Testar Conexão</button>
+            </div>
+        </div>
+
+        <!-- Análise de Layout -->
+        <div class="form-group" style="margin-top: 24px; padding-top: 24px; border-top: 1px solid var(--border);">
+            <label>🎨 Analisar e Otimizar Layout</label>
+            <div style="font-size: 11px; color: #666; margin-bottom: 12px; line-height: 1.5;">
+                1. Selecione <strong>1 frame</strong> no Figma<br>
+                2. Clique em "Analisar" abaixo<br>
+                3. A IA criará um novo frame otimizado ao lado com:<br>
+                &nbsp;&nbsp;&nbsp;• Auto-layout configurado<br>
+                &nbsp;&nbsp;&nbsp;• Nomenclaturas padronizadas (c:, w:)<br>
+                &nbsp;&nbsp;&nbsp;• Hierarquia organizada
+            </div>
+            <button id="btn-analyze-gemini" class="btn btn-primary">🚀 Analisar com IA</button>
+        </div>
+
+        <!-- Resultados -->
+        <div id="gemini-results" style="display: none; margin-top: 20px;">
+            <label>✅ Melhorias Aplicadas:</label>
+            <div id="gemini-improvements"
+                style="background: var(--code-bg); padding: 12px; border-radius: 4px; font-size: 11px; line-height: 1.6;">
+            </div>
+        </div>
+    </div>
+
 
     <!-- ABA 3: WORDPRESS -->
     <div id="tab-wp" class="content">
@@ -1212,6 +1256,61 @@
         parent.postMessage({ pluginMessage: { type: 'get-wp-config' } }, '*');
 
         renderHelpTree();
+
+
+
+        // ==================== HANDLERS GEMINI ====================
+
+        // Salvar API Key
+        document.getElementById('btn-save-gemini-key').addEventListener('click', () => {
+            const key = document.getElementById('gemini-api-key').value.trim();
+            if (!key) {
+                alert('⚠️ Digite uma API Key válida');
+                return;
+            }
+            parent.postMessage({ pluginMessage: { type: 'save-gemini-key', key } }, '*');
+        });
+
+        // Testar Conexão
+        document.getElementById('btn-test-gemini').addEventListener('click', () => {
+            parent.postMessage({ pluginMessage: { type: 'test-gemini-connection' } }, '*');
+        });
+
+        // Analisar com IA
+        document.getElementById('btn-analyze-gemini').addEventListener('click', () => {
+            document.getElementById('gemini-results').style.display = 'none';
+            parent.postMessage({ pluginMessage: { type: 'analyze-with-gemini' } }, '*');
+        });
+
+        // Receber resultados do Gemini (ADICIONAR ao window.addEventListener existente)
+        // Procure por: window.addEventListener('message', (event) => {
+        // E adicione DENTRO dele, após os outros handlers:
+
+        if (msg.type === 'gemini-connection-result') {
+            if (msg.success) {
+                alert('✅ Conexão OK! API Key válida.');
+            } else {
+                alert('❌ Falha na conexão. Verifique a API Key.');
+            }
+        }
+
+        if (msg.type === 'gemini-creation-complete') {
+            const resultsDiv = document.getElementById('gemini-results');
+            const improvementsDiv = document.getElementById('gemini-improvements');
+
+            resultsDiv.style.display = 'block';
+            improvementsDiv.innerHTML = `
+                <strong>Frame Original:</strong> ${msg.data.originalName}<br>
+                <strong>Novo Frame:</strong> ${msg.data.newName}<br><br>
+                <strong>Melhorias:</strong><br>
+                ${msg.data.improvements.map(imp => `• ${imp}`).join('<br>')}
+            `;
+        }
+
+        if (msg.type === 'gemini-error') {
+            alert('❌ Erro: ' + msg.error);
+        }
+
     </script>
 </body>
 
